# qobuz-mini

./: Cargo.toml  README.md  codebook.toml
qobuz-player-cli/: Cargo.toml
qobuz-player-cli/src/: cli.rs
qobuz-player-client/src/: client.rs  qobuz_models.rs
qobuz-player-client/src/qobuz_models/: genre.rs  library.rs  playlist.rs
qobuz-player-controls/: Cargo.toml
qobuz-player-controls/migrations/: 20250201120000_add_preferred_genre.down.sql  20250201120000_add_preferred_genre.up.sql  20260127220835_add_audio_device.down.sql  20260127220835_add_audio_device.up.sql  20260204120000_playback_stretch.down.sql  20260204120000_playback_stretch.up.sql  20260205120000_pitch_cents.down.sql  20260205120000_pitch_cents.up.sql
qobuz-player-controls/src/: client.rs  controls.rs  database.rs  error.rs  lib.rs  player.rs  sink.rs  stretch_source_signalsmith.rs
qobuz-player-models/src/: lib.rs
qobuz-player-tui/: Cargo.toml
qobuz-player-tui/src/: app.rs  discover.rs  favorites.rs  genres.rs  lib.rs  library.rs  now_playing.rs  popup.rs  search.rs  settings.rs  ui.rs  widgets.rs
qobuz-player-tui/src/widgets/: album_list.rs  album_simple_list.rs  artist_list.rs  playlist_list.rs  track_list.rs
qobuz-player-web/: Cargo.toml
qobuz-player-web/assets/: custom.css  script.js  styles.css  tailwind.css
qobuz-player-web/src/: app_state.rs  lib.rs  routes.rs
qobuz-player-web/src/routes/: album.rs  api.rs  artist.rs  discover.rs  genre.rs  library.rs  now_playing.rs  playlist.rs  search.rs  settings.rs
qobuz-player-web/templates/: add-track-to-playlist.html  album.html  artist-top-tracks.html  artist.html  base.html  controls.html  create-playlist.html  disconnected.html  discover.html  error-page.html  genre-detail.html  genres.html  head.html  info.html  library.html  list-albums.html  list-item.html  list-tracks.html  list.html  navigation.html  next.html  now-playing.html  play-pause.html  player-state.html  playlist.html  previous.html  progress.html  qobuz-login-page.html  quality-indicator.html  queue-list.html  queue.html  search-content.html  search.html  settings-content.html  settings.html  toast.html  unauthorized-page.html  volume-slider.html
qobuz-player-web/templates/icons/: loading-spinner.html  musical-note.html
