[workspace]
members = [
  "qobuz-player-cli",
  "qobuz-player-controls",
  "qobuz-player-web",
  "qobuz-player-mpris",
  "qobuz-player-tui",
  "qobuz-player-client",
  "qobuz-player-gpio",
  "qobuz-player-rfid",
  "qobuz-player-models",
]
resolver = "2"

[workspace.package]
version = "0.6.6"
edition = "2024"
license-file = "LICENSE"
repository = "https://github.com/sofusa/qobuz-player"
description = "Music player for Qobuz"

[workspace.dependencies]
axum = { version = "0.8" }
axum-extra = { version = "0.12", features = ["cookie", "form"] }
time = "0.3"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
rust-embed = { version = "8", features = ["axum", "tokio", "mime_guess"] }
dirs = "6"
futures = "0.3"
md5 = "0.8"
mime = "0.3"
mime_guess = "2"
rand = "0.9"
regex = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
snafu = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
url = "2"
moka = { version = "0.12", features = ["future"]}
rodio = { version = "0.21", default-features = false, features = ["flac", "playback"] }
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
tokio_schedule = "0.3"
rppal = "0.22"
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"] }
tui-input = "0.15"
image = "0.25"
skabelon = "0.1.18"
parking_lot = "0.12.5"
open = "5"