[package]
name = "qobuz-player-tui"

version.workspace = true
edition.workspace = true
license-file.workspace = true
repository.workspace = true

[dependencies]
qobuz-player-controls = { version = "*", path = "../qobuz-player-controls" }
qobuz-player-models = { version = "*", path = "../qobuz-player-models" }

ratatui.workspace = true
crossterm.workspace = true
futures.workspace = true
ratatui-image.workspace = true
tui-input.workspace = true
image.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true
